appId: com.curso.shopdemo
---
- launchApp:
    clearState: true
- runFlow: subflows/login.yaml
- assertVisible: "Smartphone Pro 128GB"
- tapOn: "Smartphone Pro 128GB"
- assertVisible:
    id: "tela-detalhe"
- assertVisible: "Smartphone Pro 128GB"
- assertVisible: "R$ 1.899,90"
- tapOn:
    id: "btn-voltar"
- assertVisible: 
    id: "tela-catalogo"
- assertNotVisible: "Mochila para Notebook"
- scrollUntilVisible: 
    element: "Mochila para Notebook"
- tapOn: "Mochila para Notebook"
- assertVisible:
    id: "tela-detalhe"
- assertVisible: "Mochila para Notebook"
- assertVisible: "R$ 189,90"